fixed UI alignment issues

--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -9,6 +9,8 @@ h2{
 .wrapper{
     padding-top: 106px;
     padding-bottom: 200px;
+    padding-left: 67px;
+    padding-right: 157px;
 }
 .logo-wrapper{
     display: flex;
