--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -26,9 +26,7 @@
     
 
 }
-input.form-control {
-    width: 50%!important;
-}
+
 button.btn.btn-secondary{
     background: $btn-primary !important;
     border: none !important;
